--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
 						</ul>
 						<div class="social_wrap">
 							<ul>
-								<li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-vk"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
+								<li><a href="https://www.skype.com/en/" target="_blank"><i class="fa fa-twitter"></i></a></li>
+								<li><a href="https://vk.com/id390247420" target="_blank"><i class="fa fa-vk"></i></a></li>
+								<li><a href="https://www.facebook.com/profile.php?id=100004766436316" target="_blank"><i class="fa fa-facebook"></i></a></li>
 								<li><a href="#" target="_blank"><i class="fa fa-skype"></i></a></li>
 							</ul>
 						</div>
