--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 					</div>
 					<div class="col-md-4 col-md-pull-4 animation_2">
 						<h3>About myself</h3>
-						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
-						<p>when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem </p>
+						<p>I am 21 years old. I am from Kazakhstan. I have graduated from WSIiZ in Rzeszow, Poland, living there as well.</p>
+						<p>I am interested in companies which are going to provide me with interesting projects and as much "challenges" as it is possible.</p>
 					</div>
 					<div class="col-md-4 animation_3 personal_last_block">
 						<h3>Personal information</h3>
@@ -119,17 +119,17 @@
 								<div class="resume_item">
 									<div class="year">2011</div>
 									<div class="resume_description">Kazkommertsbank <strong>System Administrator</strong></div>
-									<p>ou asked, Font Awesome delivers with 41 shiny new icons in version 4.7. Want to request new icons? Here's how. Need vectors or want to use on the desktop? Check the cheatsheet.</p>
+									<p>I was installing, upgrading, configuring, performance tuning, maintaining and providing general support of Windows operation systems. Debugging system related issues</p>
 								</div>
 								<div class="resume_item">
 									<div class="year">2017</div>
 									<div class="resume_description">BLPS Content Connections <strong>Junior Web Developer</strong></div>
-									<p>ou asked, Font Awesome delivers with 41 shiny new icons in version 4.7. Want to request new icons? Here's how. Need vectors or want to use on the desktop? Check the cheatsheet.</p>
+									<p>Instructional design: conceptualization, module development, templating. Assessments: item development (traditional and interactive), passage development, correlations/standards, leveling/rubrics</p>
 								</div>
 								<div class="resume_item">
 									<div class="year">2017</div>
 									<div class="resume_description">BLPS Content Connections <strong>Junior Web Developer</strong></div>
-									<p>ou asked, Font Awesome delivers with 41 shiny new icons in version 4.7. Want to request new icons? Here's how. Need vectors or want to use on the desktop? Check the cheatsheet.</p>
+									<p>Instructional design: conceptualization, module development, templating. Assessments: item development (traditional and interactive), passage development, correlations/standards, leveling/rubrics</p>
 								</div>
 						</div>
 						<div class="col-md-6 right">
