--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
 						</ul>
 						<div class="social_wrap">
 							<ul>
-								<li><a href="https://www.skype.com/en/" target="_blank"><i class="fa fa-twitter"></i></a></li>
+								<li><a href="https://twitter.com/?lang=en" target="_blank"><i class="fa fa-twitter"></i></a></li>
 								<li><a href="https://vk.com/id390247420" target="_blank"><i class="fa fa-vk"></i></a></li>
 								<li><a href="https://www.facebook.com/profile.php?id=100004766436316" target="_blank"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-skype"></i></a></li>
+								<li><a href="https://www.skype.com/en/" target="_blank"><i class="fa fa-skype"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -179,9 +179,9 @@
 						<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-1">
 							<img src="img/portfolio-images/1.jpg" alt="Alt" />
 							<div class="port_item_cont">
-								<h3>Name of the project</h3>
-								<p>Description of the project</p>
-								<a href="#" class="popup_content">Check it out</a>
+								<h3>Assets</h3>
+								<p>I have done hundreds of them while working in BLPS Group</p>
+								<a href="http://www.mauthor.com/mycontent/view/5065778702581760?next=/mycontent" class="popup_content">Check it out</a>
 							</div>
 							<div class="hidden">
 								<div class="podrt_descr">
