--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
 								<div class="podrt_descr">
 									<div class="modal-box-content">
 										<button class="mfp-close" type="button" title="Close (Esc)">x</button>
-										<h3>Name of the project</h3>
-										<p>Description of the project</p>
+										<h3>Assets</h3>
+										<p>I have done hundreds of them while working in BLPS Group</p>
 										<img src="img/portfolio-images/1.jpg" alt="Alt" />
 									</div>
 								</div>
