php script check

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 							<div class="port_item_cont">
 								<h3>Assets</h3>
 								<p>I have done hundreds of them while working in BLPS Group</p>
-								<a href="http://www.mauthor.com/mycontent/view/5065778702581760?next=/mycontent" class="popup_content">Check it out</a>
+								<a href="#" class="popup_content">Check it out</a>
 							</div>
 							<div class="hidden">
 								<div class="podrt_descr">
