--- a/matigas/index.html
+++ b/matigas/index.html
@@ -136,6 +136,20 @@
 				<div class="col-md-6">
 					<div class="logo"></div>
 				</div>
+				<div class="col-md-6">
+					<form>
+						<!-- Hidden Required Fields -->
+						<input type="hidden" name="project_name" value="Yandex Taxi">
+						<input type="hidden" name="admin_email" value="alimzhan.aigarayev@gmail.com">
+						<input type="hidden" name="form_subject" value="Заявка с сайта">
+						<!-- END Hidden Required Fields -->
+
+						<input type="text" name="Name" placeholder="ФИО..." required><br>
+						<input type="text" name="E-mail" placeholder="Ваш E-mail..." required><br>
+						<input type="text" name="Phone" placeholder="Ваш телефон..."><br>
+						<button>Отправить</button>
+					</form>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -157,6 +171,7 @@
 	<script src="libs/scroll2id/PageScroll2id.min.js"></script>
 	<script src="libs/waypoints/waypoints.min.js"></script>
 	<script src="js/common.js"></script>
+	<script src="js/script.js"></script>
 	<!-- Yandex.Metrika counter --><!-- /Yandex.Metrika counter -->
 	<!-- Google Analytics counter --><!-- /Google Analytics counter -->
 </body>
