--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 										<button class="mfp-close" type="button" title="Close (Esc)">x</button>
 										<h3>Assets</h3>
 										<p>I have done hundreds of them while working in BLPS Group</p>
-										<img src="img/portfolio-images/1.jpg" alt="Alt" />
+										<a href="http://www.mauthor.com/mycontent/view/5065778702581760?next=/mycontent"><img src="img/portfolio-images/1.jpg" alt="Alt" /></a>
 									</div>
 								</div>
 							</div>
