--- a/matigas/index.html
+++ b/matigas/index.html
@@ -5,7 +5,6 @@
 	<title>MATIGAS таксопарк</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="shortcut icon" href="favicon.png" />
 	<link rel="stylesheet" href="libs/bootstrap/bootstrap-grid.min.css" />
 	<link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css" />
 	<link rel="stylesheet" href="libs/animate/animate.min.css" />
@@ -24,7 +23,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<div class="logo"></div>
+					<div class="logo logo_top"></div>
 					<div class="logo_container_first">
 					</div>
 					<div class="logo_container_second">
@@ -35,21 +34,25 @@
 		<div class="top_wrapper">
 			<div class="top_descr">
 				<div class="top_centered">
-					<h2>Зарабатывайте от 250 000 тг. в месяц!</h2>
-					<p><i class="fa fa-check" aria-hidden="true"></i> Официальный партнер Яндекс Такси и UBER</p>
-					<p><i class="fa fa-check" aria-hidden="true"></i> Осуществление ежедневных выплат!</p>
-					<a href="#" class="sending">Отправить заявку</a>
+					<div class="container">
+						<div class="row">
+							<h2>Зарабатывайте от 250 000 тг. в месяц!</h2>
+							<p><i class="fa fa-check" aria-hidden="true"></i> Официальный партнер Яндекс Такси и UBER</p>
+							<p><i class="fa fa-check" aria-hidden="true"></i> Осуществление ежедневных выплат!</p>
+							<a href="#contacts" class="sending">Отправить заявку</a>	
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
-		<a href="#">
+		<a href="#valuead">
 			<div class="mouse">
 				<div class="scroll"></div>
 			</div>
 		</a>
 	</header>
 
-	<section class="valuead">
+	<section class="valuead" id="valuead">
 		<div class="section_header">
 			<h2>Почему водители выбирают нас</h2>
 			<div class="s_descr_wrap">
@@ -134,25 +137,44 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6">
-					<div class="logo"></div>
+					<div class="reg">
+						<div class="logo"></div>
+						<p class="reg_header">Онлайн WhatsApp регистрация: </p>
+						<div class="whatsapp"></div>
+						<p>Номер телефона</p>
+						<div class="whatsapp"></div>
+						<p>Номер телефона</p>
+						<div class="whatsapp"></div>
+						<p>Номер телефона</p>
+					</div>
 				</div>
 				<div class="col-md-6">
+					<h1>Таксопарк "MATIGAS"</h1>
 					<form>
 						<!-- Hidden Required Fields -->
 						<input type="hidden" name="project_name" value="Yandex Taxi">
-						<input type="hidden" name="admin_email" value="alimzhan.aigarayev@gmail.com">
+						<input type="hidden" name="admin_email" value="matigas.yandex@mail.ru">
 						<input type="hidden" name="form_subject" value="Заявка с сайта">
 						<!-- END Hidden Required Fields -->
 
 						<input type="text" name="Name" placeholder="ФИО..." required><br>
 						<input type="text" name="E-mail" placeholder="Ваш E-mail..." required><br>
 						<input type="text" name="Phone" placeholder="Ваш телефон..."><br>
-						<button>Отправить</button>
+						<button class="sending">Отправить</button>
 					</form>
 				</div>
 			</div>
 		</div>
 	</section>
+	<div class="main_footer">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					&copy; 2017 Alimzhan Aigarayev
+				</div>
+			</div>
+		</div>
+	</div>
 
 
 
@@ -166,12 +188,12 @@
 	<![endif]-->
 	
 	<script src="libs/jquery/jquery-2.1.3.min.js"></script>
+	<script src="script.js"></script>
 	<script src="libs/animate/animate-css.js"></script>
 	<script src="libs/parallax/parallax.min.js"></script>
 	<script src="libs/scroll2id/PageScroll2id.min.js"></script>
 	<script src="libs/waypoints/waypoints.min.js"></script>
 	<script src="js/common.js"></script>
-	<script src="js/script.js"></script>
 	<!-- Yandex.Metrika counter --><!-- /Yandex.Metrika counter -->
 	<!-- Google Analytics counter --><!-- /Google Analytics counter -->
 </body>
