--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
 						<div class="contact_box">
 							<div class="contact_box_icon"><i class="fas fa-map-marker"></i></div>
 							<h3>Address:</h3>
-							<p>Rzeszow, Poland</p>
+							<p>Warsaw, Poland</p>
 						</div>
 						<div class="contact_box">
 							<div class="contact_box_icon"><i class="fas fa-phone"></i></div>
