--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 						<div class="social_wrap">
 							<ul>
 								<li><a href="https://github.com/megubka" target="_blank"><i class="fab fa-github"></i></a></li>
+								<li><a href="https://codepen.io/alimzhan/" target="_blank"><i class="fab fa-codepen"></i></i></a></li>
 								<li><a href="https://vk.com/id390247420" target="_blank"><i class="fab fa-vk"></i></i></a></li>
 								<li><a href="https://www.facebook.com/profile.php?id=100004766436316" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
 								<li><a href="skype:live:a0a20988b2cfaddb?call" target="_blank"><i class="fab fa-skype"></i></a></li>
@@ -365,6 +366,7 @@
 			<div class="social_wrap">
 				<ul>
 					<li><a href="https://github.com/megubka" target="_blank"><i class="fab fa-github"></i></a></li>
+					<li><a href="https://codepen.io/alimzhan/" target="_blank"><i class="fab fa-codepen"></i></i></a></li>
 					<li><a href="https://vk.com/id390247420" target="_blank"><i class="fab fa-vk"></i></i></a></li>
 					<li><a href="https://www.facebook.com/profile.php?id=100004766436316" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
 					<li><a href="skype:live:a0a20988b2cfaddb?call" target="_blank"><i class="fab fa-skype"></i></a></li>
